--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,53 +5,52 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="restaurant name"
-        android:translationY="0sp"
-        android:translationX="10sp"
         android:textSize="50sp"
-        />
+        android:translationX="10sp"
+        android:translationY="0sp" />
 
     <TextView
+        android:id="@+id/Hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hours open"
-        android:translationY="100sp"
-        android:translationX="-80sp"
         android:textSize="30sp"
-        />
+        android:translationX="100sp"
+        android:translationY="100sp" />
+
     <Button
+        android:id="@+id/Reserve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reservations"
+        android:translationX="100sp"
         android:translationY="600sp"
-        android:translationX="30sp"
 
         />
 
     <Button
+        android:id="@+id/Menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Menu"
-        android:translationX="-220sp"
-        android:translationY="600sp" />
+        android:translationX="150sp"
+        android:translationY="500sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:contentDescription="Front building image"
-        android:translationX="-200sp"
-        android:translationY="300sp"
+        android:translationX="200sp"
+        android:translationY="200sp"
         app:srcCompat="@android:drawable/btn_dialog" />
-
-
-
 
 
 </LinearLayout>
