menu xml updated and  orientation of xml one

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,15 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Panacake House"
         android:textSize="53sp"
-
         android:translationX="10sp"
         android:translationY="0sp" />
 
     <TextView
-
+        android:id="@+id/Hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open: 12am-12pm \nClosed: 1pm-11pm"
@@ -52,7 +50,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="Front building image"
         android:translationX="2sp"
-        android:translationY="-220sp"
+        android:translationY="-170sp"
         app:srcCompat="@drawable/panacake_house" />
 
 
