--- a/app/src/main/res/layout/activity_main_activitythree.xml
+++ b/app/src/main/res/layout/activity_main_activitythree.xml
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/Sixmeal"
-        android:text="Hamburger"
+        android:text="Haburger"
         android:textSize="20sp"
         android:translationX="260sp"
         android:translationY="-300sp" />
