--- a/app/src/main/res/layout/activity_main_activitythree.xml
+++ b/app/src/main/res/layout/activity_main_activitythree.xml
@@ -110,7 +110,7 @@
         app:srcCompat="@drawable/burger" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/Back"
         android:layout_width="wrap_content"
         android:layout_height="90sp"
         android:text="BACK"
