--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,164 +8,6 @@
     android:orientation="vertical"
     tools:context=".Menu">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/Onemeal"
-        android:text="Classic Panacake"
-        android:textSize="20sp" />
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="149dp"
-        android:layout_height="123dp"
-        app:srcCompat="@drawable/classic_panacake" />
-    <Button
-        android:id="@+id/add1"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add1"
-        android:textSize="50sp"
-        android:translationX="10sp"
-        android:translationY="0sp" />
-
-
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/Twomeal"
-        android:text="Chocolate Panacake"
-        android:textSize="20sp"
-        android:translationX="200sp"
-        android:translationY="-240sp" />
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="142dp"
-        android:layout_height="127dp"
-        android:translationX="220sp"
-        android:translationY="-240sp"
-        app:srcCompat="@drawable/choc_panacake" />
-    <Button
-        android:id="@+id/add2"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add2"
-        android:textSize="50sp"
-        android:translationX="210sp"
-        android:translationY="-240sp" />
-
-
-
-    <TextView
-        android:id="@+id/Threemeal"
-        android:layout_width="109dp"
-        android:layout_height="wrap_content"
-        android:text="Breakfast Hashbrown Bowls"
-        android:textSize="20sp"
-        android:translationX="10sp"
-        android:translationY="-230sp" />
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="142dp"
-        android:layout_height="122dp"
-        android:translationX="0sp"
-        android:translationY="-230sp"
-        app:srcCompat="@drawable/waffle_house_sausage_hashbrown_bowl_pin_2" />
-    <Button
-        android:id="@+id/add3"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add3"
-        android:textSize="50sp"
-        android:translationX="0sp"
-        android:translationY="-230sp" />
-
-
-
-
-
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/Fourmeal"
-        android:text="BLT"
-        android:textSize="20sp"
-        android:translationX="260sp"
-        android:translationY="-520sp" />
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="140dp"
-        android:layout_height="116dp"
-        android:translationX="220sp"
-        android:translationY="-500sp"
-        app:srcCompat="@drawable/blt_for_recipe_1_6_1200x675" />
-    <Button
-        android:id="@+id/add4"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add4"
-        android:textSize="50sp"
-        android:translationX="220sp"
-        android:translationY="-490sp" />
-
-
-
-
-
-    <TextView
-        android:id="@+id/Fivemeal"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:text="New York Strip Steak"
-        android:textSize="20sp"
-        android:translationX="0sp"
-        android:translationY="-450sp" />
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="143dp"
-        android:layout_height="126dp"
-        android:translationY="-480sp"
-        app:srcCompat="@drawable/ny_strip_w_peppercorn_sauce_11" />
-    <Button
-        android:id="@+id/add5"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add5"
-        android:textSize="50sp"
-        android:translationX="0sp"
-        android:translationY="-480sp" />
-
-
-
-
-
-    <TextView
-        android:id="@+id/Sixmeal"
-        android:layout_width="96dp"
-        android:layout_height="38dp"
-        android:text="Haburger"
-        android:textSize="20sp"
-        android:translationX="260sp"
-        android:translationY="-730sp" />
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="154dp"
-        android:layout_height="133dp"
-        android:translationX="220sp"
-        android:translationY="-730sp"
-        app:srcCompat="@drawable/burger" />
-    <Button
-        android:id="@+id/add6"
-        android:layout_width="wrap_content"
-        android:layout_height="90sp"
-        android:text="add6"
-        android:textSize="50sp"
-        android:translationX="250sp"
-        android:translationY="-740sp" />
-
-
-
 
     <Button
         android:id="@+id/mback"
@@ -173,6 +15,174 @@
         android:layout_height="90sp"
         android:text="BACK"
         android:textSize="50sp"
-        android:translationX="110sp"
-        android:translationY="-750sp" />
+        android:translationX="120sp"
+        android:translationY="750sp" />
+
+
+
+
+
+    <TextView
+    android:id="@+id/Onemeal"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+            android:text="Classic Panacake"
+            android:textSize="20sp"
+        android:translationY="-80sp" />
+    <ImageView
+    android:id="@+id/imageView1"
+        android:layout_width="149dp"
+        android:layout_height="123dp"
+            app:srcCompat="@drawable/classic_panacake"
+        android:translationY="-80sp"/>
+    <Button
+    android:id="@+id/minus1"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="40sp"
+        android:translationY="-70sp" />
+
+
+
+
+
+    <TextView
+    android:id="@+id/Twomeal"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+            android:text="Chocolate Panacake"
+            android:textSize="20sp"
+        android:translationX="200sp"
+        android:translationY="-280sp" />
+    <ImageView
+    android:id="@+id/imageView2"
+        android:layout_width="142dp"
+        android:layout_height="127dp"
+            app:srcCompat="@drawable/choc_panacake"
+        android:translationX="220sp"
+        android:translationY="-280sp" />
+    <Button
+    android:id="@+id/minus2"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="260sp"
+        android:translationY="-280sp"/>
+
+
+
+
+    <TextView
+    android:id="@+id/Threemeal"
+        android:layout_width="228dp"
+        android:layout_height="wrap_content"
+            android:text="Breakfast Hashbrown Bowls"
+            android:textSize="20sp"
+        android:translationY="-240sp" />
+    <ImageView
+    android:id="@+id/imageView3"
+        android:layout_width="142dp"
+        android:layout_height="122dp"
+            app:srcCompat="@drawable/waffle_house_sausage_hashbrown_bowl_pin_2"
+        android:translationX="30sp"
+        android:translationY="-260sp"/>
+    <Button
+    android:id="@+id/minus3"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="70sp"
+        android:translationY="-260sp"/>
+
+
+
+
+
+
+
+
+    <TextView
+    android:id="@+id/Fourmeal"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+            android:text="BLT"
+            android:textSize="20sp"
+        android:translationX="270sp"
+        android:translationY="-460sp" />
+    <ImageView
+    android:id="@+id/imageView4"
+        android:layout_width="140dp"
+        android:layout_height="116dp"
+        app:srcCompat="@drawable/blt_for_recipe_1_6_1200x675"
+        android:translationX="220sp"
+        android:translationY="-450sp" />
+    <Button
+    android:id="@+id/minus4"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="260sp"
+        android:translationY="-450sp"/>
+
+
+    <TextView
+        android:id="@+id/Fivemeal"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:text="New York Strip Steak"
+        android:textSize="20sp"
+        android:translationY="-400sp"/>
+    <ImageView
+    android:id="@+id/imageView5"
+        android:layout_width="143dp"
+        android:layout_height="126dp"
+        app:srcCompat="@drawable/ny_strip_w_peppercorn_sauce_11"
+        android:translationY="-400sp"/>
+    <Button
+    android:id="@+id/minus5"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="40sp"
+        android:translationY="-400sp"/>
+
+
+
+
+
+
+    <TextView
+    android:id="@+id/Sixmeal"
+        android:layout_width="96dp"
+        android:layout_height="38dp"
+            android:text="Haburger"
+            android:textSize="20sp"
+        android:translationX="260sp"
+        android:translationY="-620sp" />
+    <ImageView
+    android:id="@+id/imageView6"
+        android:layout_width="154dp"
+        android:layout_height="133dp"
+            app:srcCompat="@drawable/burger"
+        android:translationX="220sp"
+        android:translationY="-630sp" />
+    <Button
+    android:id="@+id/minus6"
+        android:layout_width="60sp"
+        android:layout_height="50sp"
+            android:text="-"
+            android:textSize="20sp"
+        android:translationX="270sp"
+        android:translationY="-630sp"/>
+
+
+
+
+
 </LinearLayout>
