FIXED SAVING USER DATA BETWEEN INTENTS, ONTO PURCHASES AND TAX

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,10 +40,10 @@
         android:translationY="10sp" />
 
     <Button
-        android:id="@+id/Reserve"
+        android:id="@+id/OrdersPlaced"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reservations"
+        android:text="Checkout"
         android:textSize="40sp"
         android:translationX="60sp"
         android:translationY="450sp" />
